# dial2vec

./: README.md  pyproject.toml  workbook-mlx.ipynb  workbook.ipynb
dial2vec/: data.py  metrics.py  model.py  pyproject.toml
dial2vec_mlx/: model.py
