[project]
name = "dial2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "prettytable>=3.16.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
