[project]
name = "dial2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coremltools>=8.3.0",
    "ekphrasis>=0.5.4",
    "ipywidgets>=8.1.7",
    "livelossplot>=0.5.6",
    "mlx-embeddings>=0.0.3",
    "numba>=0.61.2",
]
