[project]
name = "dial2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "prettytable>=3.16.0",
    "protobuf>=6.31.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
